--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
+about-time==4.2.1
+alive-progress==3.1.5
 altair==5.4.0
 attrs==24.2.0
+black==24.8.0
 click==8.1.7
 cloudpickle==3.0.0
 contourpy==1.1.1
@@ -10,6 +13,7 @@ distributed==2023.5.0
 flake8==7.1.1
 fonttools==4.53.1
 fsspec==2024.6.1
+grapheme==0.6.0
 imageio==2.35.0
 importlib_metadata==8.2.0
 importlib_resources==6.4.2
@@ -24,6 +28,7 @@ MarkupSafe==2.1.5
 matplotlib==3.7.5
 mccabe==0.7.0
 msgpack==1.0.8
+mypy-extensions==1.0.0
 narwhals==1.4.2
 networkx==3.1
 numpy==1.24.4
@@ -31,10 +36,12 @@ opencv-python==4.10.0.84
 packaging==24.1
 pandas==2.0.3
 partd==1.4.1
+pathspec==0.12.1
 patsy==0.5.6
 pillow==10.4.0
 pkgutil_resolve_name==1.3.10
 plantcv==4.4
+platformdirs==4.2.2
 psutil==6.0.0
 pycodestyle==2.12.1
 pyflakes==3.2.0
@@ -55,6 +62,7 @@ statsmodels==0.14.1
 tblib==3.0.0
 threadpoolctl==3.5.0
 tifffile==2023.7.10
+tomli==2.0.1
 toolz==0.12.1
 tornado==6.4.1
 typing_extensions==4.12.2
