--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 about-time==4.2.1
+absl-py==2.1.0
 alive-progress==3.1.5
 altair==5.4.0
+astunparse==1.6.3
 attrs==24.2.0
 black==24.8.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
 click==8.1.7
 cloudpickle==3.0.0
 contourpy==1.1.1
@@ -11,9 +15,15 @@ dask==2023.5.0
 dask-jobqueue==0.8.5
 distributed==2023.5.0
 flake8==7.1.1
+flatbuffers==24.3.25
 fonttools==4.53.1
 fsspec==2024.6.1
+gast==0.6.0
+google-pasta==0.2.0
 grapheme==0.6.0
+grpcio==1.66.1
+h5py==3.11.0
+idna==3.8
 imageio==2.35.0
 importlib_metadata==8.2.0
 importlib_resources==6.4.2
@@ -21,18 +31,39 @@ Jinja2==3.1.4
 joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
+keras==3.5.0
 kiwisolver==1.4.5
 lazy_loader==0.4
+libclang==18.1.1
 locket==1.0.0
+Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 matplotlib==3.7.5
 mccabe==0.7.0
+mdurl==0.1.2
+ml-dtypes==0.4.0
 msgpack==1.0.8
 mypy-extensions==1.0.0
+namex==0.0.8
 narwhals==1.4.2
 networkx==3.1
 numpy==1.24.4
+nvidia-cublas-cu12==12.3.4.1
+nvidia-cuda-cupti-cu12==12.3.101
+nvidia-cuda-nvcc-cu12==12.3.107
+nvidia-cuda-nvrtc-cu12==12.3.107
+nvidia-cuda-runtime-cu12==12.3.101
+nvidia-cudnn-cu12==8.9.7.29
+nvidia-cufft-cu12==11.0.12.1
+nvidia-curand-cu12==10.3.4.107
+nvidia-cusolver-cu12==11.5.4.101
+nvidia-cusparse-cu12==12.2.0.103
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.3.101
 opencv-python==4.10.0.84
+opt-einsum==3.3.0
+optree==0.12.1
 packaging==24.1
 pandas==2.0.3
 partd==1.4.1
@@ -42,15 +73,19 @@ pillow==10.4.0
 pkgutil_resolve_name==1.3.10
 plantcv==4.4
 platformdirs==4.2.2
+protobuf==4.25.4
 psutil==6.0.0
 pycodestyle==2.12.1
 pyflakes==3.2.0
+Pygments==2.18.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 PyWavelets==1.4.1
 PyYAML==6.0.2
 referencing==0.35.1
+requests==2.32.3
+rich==13.8.0
 rpds-py==0.20.0
 scikit-image==0.21.0
 scikit-learn==1.3.2
@@ -60,15 +95,23 @@ six==1.16.0
 sortedcontainers==2.4.0
 statsmodels==0.14.1
 tblib==3.0.0
+tensorboard==2.17.1
+tensorboard-data-server==0.7.2
+tensorflow==2.17.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==2.4.0
 threadpoolctl==3.5.0
 tifffile==2023.7.10
 tomli==2.0.1
 toolz==0.12.1
 tornado==6.4.1
+tqdm==4.66.5
 typing_extensions==4.12.2
 tzdata==2024.1
 urllib3==2.2.2
 vl-convert-python==1.6.0
+Werkzeug==3.0.4
+wrapt==1.16.0
 xarray==2023.1.0
 zict==3.0.0
 zipp==3.20.0
